12 September 2007: Wouter
	- fixup of manual page warnings, like for NSD bugreport.
	- nsec3 work, config, max iterations, filter, and hash cache. 

6 September 2007: Wouter
	- fixup to find libevent on mac port install.
	- fixup size_t vs unsigned portability in validator/sigcrypt.
	- please compiler on different platforms, for unreachable code.
	- val_nsec3 file.
	- pthread_rwlock type is optional, in case of old pthread libs.

5 September 2007: Wouter
	- cname, name error validator tests.
	- logging of qtype ANY works.
	- ANY type answers get RRSIG in answer section of replies (but not
	  in other sections, unless DO bit is on).
	- testbound can replay a TCP query (set MATCH TCP in the QUERY).
	- DS and noDS referral validation test.
	- if you configure many trust anchors, parent trust anchors can
	  securely deny existance of child trust anchors, if validated.
	- not all *.name NSECs are present because a wildcard was matched,
	  and *.name NSECs can prove nodata for empty nonterminals.
	  Also, for wildcard name NSECs, check they are not from the parent
	  zone (for wildcarded zone cuts), and check absence of CNAME bit,
	  for a nodata proof.
	- configure option for memory allocation debugging.
	- port configure option for memory allocation to solaris10.

4 September 2007: Wouter
	- fixup of Leakage warning when serviced queries processed multiple
	  callbacks for the same query from the same server.
	- testbound removes config file from /tmp on failed exit.
	- fixup for referral cleanup of the additional section.
	- tests for cname, referral validation.
	- neater testbound tpkg output.
	- DNAMEs no longer match their apex when synthesized from the cache.
	- find correct signer name for DNAME responses.
	- wildcarded DNAME test and fixup code to detect.
	- prepend NSEC and NSEC3 rrsets in the iterator while chasing CNAMEs.
	  So that wildcarded CNAMEs get their NSEC with them to the answer.
	- test for a CNAME to a DNAME to a CNAME to an answer, all from